# indexer

./: .gitignore  .pre-commit-config.yaml  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: tests.yml
consumer/: .env.example  Dockerfile  README.md  rand.json  rand.py
consumer/consumer/: __main__.py  config.py  consumer.py  models.py
consumer/consumer/utils/: __init__.py  redis.py  web3.py
gamic_indexer/: __main__.py  log.py  settings.py
gamic_indexer/services/redis/: lifespan.py
gamic_indexer/web/: application.py  lifespan.py
gamic_indexer/web/api/: __init__.py
indexer/: Dockerfile  docker-compose.yml  pyproject.toml  rand.py
indexer/indexer/: __main__.py  chain_manager.py  chain_worker.py  config.py  models.py  rpc_client.py
indexer/indexer/utils/: custom_types.py  decorators.py  redis.py
indexer/sdk/: __init__.py  client.py  models.py
manager/: Dockerfile
manager/deploy/: docker-compose.dev.yml
manager/gamic_indexer/: gunicorn_runner.py  settings.py
manager/gamic_indexer/services/: __init__.py
manager/gamic_indexer/utils/: __init__.py  models.py
manager/gamic_indexer/web/: __init__.py
manager/gamic_indexer/web/api/: router.py
manager/gamic_indexer/web/api/commands/: __init__.py  views.py
manager/gamic_indexer/web/api/monitoring/: __init__.py
tests/: __init__.py  conftest.py
